CREATE TABLE TB_CLIENTE (
  ID NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  NM_CLIENTE VARCHAR2(80) NOT NULL
);

CREATE TABLE TB_CANTOR (
  ID NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  NM_CANTOR VARCHAR2(80) NOT NULL,
  SENHA_CANTOR VARCHAR2(60) NOT NULL,
  EMAIL_CANTOR VARCHAR2(120) UNIQUE NOT NULL
);

CREATE TABLE TB_MUSICA (
  ID NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  TITULO VARCHAR2(100) NOT NULL,
  ARTISTA VARCHAR2(100) NOT NULL,
  GENERO VARCHAR2(50) NOT NULL,
  ID_CANTOR NUMBER NOT NULL,
  CONSTRAINT FK_MUSICA_CANTOR FOREIGN KEY (ID_CANTOR) REFERENCES TB_CANTOR(ID)
);

CREATE TABLE TB_PEDIDO (
  ID NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  ID_CLIENTE NUMBER NOT NULL,
  ID_MUSICA NUMBER NOT NULL,
  CONSTRAINT FK_PEDIDO_CLIENTE FOREIGN KEY (ID_CLIENTE) REFERENCES TB_CLIENTE(ID),
  CONSTRAINT FK_PEDIDO_MUSICA FOREIGN KEY (ID_MUSICA) REFERENCES TB_MUSICA(ID)
);
