@startuml
entity TB_CLIENTE {
  *id : NUMBER
  nm_cliente : VARCHAR2(80)
}
entity TB_CANTOR {
  *id : NUMBER
  nm_cantor : VARCHAR2(80)
  senha_cantor : VARCHAR2(60)
  email_cantor : VARCHAR2(120)
}
entity TB_MUSICA {
  *id : NUMBER
  titulo : VARCHAR2(100)
  artista : VARCHAR2(100)
  genero : VARCHAR2(50)
  id_cantor : NUMBER
}
entity TB_PEDIDO {
  *id : NUMBER
  id_cliente : NUMBER
  id_musica : NUMBER
}
TB_MUSICA }o--|| TB_CANTOR : "N..1"
TB_PEDIDO }o--|| TB_CLIENTE : "N..1"
TB_PEDIDO }o--|| TB_MUSICA : "N..1"
@enduml
